--- a/docs/_includes/elements/attribution.html
+++ b/docs/_includes/elements/attribution.html
@@ -20,7 +20,7 @@
 
 <tr>
   <td colspan="2" class="smaller text">
-  generated with <strong>lsdoc</strong> v0.0.0 (<a href="https://github.com/pixeldroid/lsdoc" title="an API docs generator for LoomScript">https://github.com/pixeldroid/lsdoc</a>)
+  generated with <strong>lsdoc</strong> (<a href="https://github.com/pixeldroid/lsdoc" title="an API docs generator for LoomScript">https://github.com/pixeldroid/lsdoc</a>)
   </td>
 </tr>
 
