--- a/lib/ghpages-template/_includes/elements/title.html
+++ b/lib/ghpages-template/_includes/elements/title.html
@@ -4,5 +4,5 @@
 
 <div class="borderless header item">
 <span class="larger text">{{ site.project.name }}</span>
-<div class="ui horizontal label" style="font-weight: lighter;">v{{ site.project.version }}</div>
+<div class="ui horizontal basic grey label" style="font-weight: lighter;">v{{ site.project.version }}</div>
 </div>
