separate template config from user project config
user will provide user config location on cli, template contains its
own config in the template dir.

merge the two together when generating the site config: _config.yml

- template config: /lib/ghpages-template/ghpages.config
- user config: <wherever>, e.g. /doc/lsdoc.config

--- a/docs/_includes/elements/attribution.html
+++ b/docs/_includes/elements/attribution.html
@@ -20,7 +20,7 @@
 
 <tr>
   <td colspan="2" class="smaller text">
-  generated with <strong>lsdoc</strong> (<a href="https://github.com/pixeldroid/lsdoc" title="an API docs generator for LoomScript">https://github.com/pixeldroid/lsdoc</a>)
+  generated with <strong>lsdoc</strong> v{{ site.template_version }} (<a href="https://github.com/pixeldroid/lsdoc" title="an API docs generator for LoomScript">https://github.com/pixeldroid/lsdoc</a>)
   </td>
 </tr>
 
