--- a/lib/ghpages-template/_includes/elements/attribution.html
+++ b/lib/ghpages-template/_includes/elements/attribution.html
@@ -20,7 +20,7 @@
 
 <tr>
   <td colspan="2" class="smaller text">
-  generated with <strong>lsdoc</strong> (<a href="https://github.com/pixeldroid/lsdoc" title="an API docs generator for LoomScript">https://github.com/pixeldroid/lsdoc</a>)
+  generated with <strong>lsdoc</strong> v{{ site.template_version }} (<a href="https://github.com/pixeldroid/lsdoc" title="an API docs generator for LoomScript">https://github.com/pixeldroid/lsdoc</a>)
   </td>
 </tr>
 
