--- a/lib/ghpages-template/styles/site.css
+++ b/lib/ghpages-template/styles/site.css
@@ -17,6 +17,7 @@ layout: compress
 {% include styles/semantic-ui/label.min.css %}
 {% include styles/semantic-ui/list.min.css %}
 {% include styles/semantic-ui/menu.min.css %}
+{% include styles/semantic-ui/message.min.css %}
 {% include styles/semantic-ui/modal.min.css %}
 {% include styles/semantic-ui/rail.min.css %}
 {% include styles/semantic-ui/search.min.css %}
