--- a/lib/ghpages-template/_includes/module_has_link.liquid
+++ b/lib/ghpages-template/_includes/module_has_link.liquid
@@ -1,7 +1,7 @@
 {%- comment -%}
 
 module_has_link
-  checks site.collections[site.module_root].docs for doc with url attribute that matches include.module_url
+  checks documents in the site.module_root collection for a url attribute that matches include.module_url
 
 params:
   module_url="/api/foo/bar/Baz"
@@ -13,20 +13,17 @@ returns:
 {%- endcomment -%}
 {%- assign u = include.module_url -%}
 {%- assign found = false -%}
-{%- for collection in site.collections -%}
-  {%- assign collection_root = collection.label | prepend: "/" -%}
-  {%- if collection_root == site.module_root -%}
-    {%- for doc in collection.docs -%}
-      {%- if u == doc.url -%}
-        {%- assign found = true -%}
-        {%- break -%}
-      {%- endif -%}
-      {%- assign u1 = u | append: "/" -%}
-      {%- if u1 == doc.url -%}
-        {%- assign found = true -%}
-        {%- break -%}
-      {%- endif -%}
-    {%- endfor -%}
+{%- assign api_collection = site.module_root | slice: 1, site.module_root.size -%}
+{%- assign api_docs = site.documents | where:"collection",api_collection -%}
+
+{%- for doc in api_docs -%}
+  {%- if u == doc.url -%}
+    {%- assign found = true -%}
+    {%- break -%}
+  {%- endif -%}
+  {%- assign u1 = u | append: "/" -%}
+  {%- if u1 == doc.url -%}
+    {%- assign found = true -%}
     {%- break -%}
   {%- endif -%}
 {%- endfor -%}
