--- a/lib/ghpages-template/_layouts/type.html
+++ b/lib/ghpages-template/_layouts/type.html
@@ -151,10 +151,10 @@ layout: page
   {% if needs_table %}<table class="ui striped definition table"><tbody>
   {% for p in item.parameters %}
     {% capture p_sig %}{% include parameter_signature.liquid param=p base_url=include.base_url %}{% endcapture %}
-    {% capture optional %}{% if p.default_value or p.is_var_args %}<div class="ui horizontal label">optional</div>{% endif %}{% endcapture %}
-    <tr><td class="collapsing"><code>{{ p_sig | rstrip }}</code></td><td>{{ optional }}{% if p.description %}{{ p.description | markdownify | rstrip }}{% endif %}</td></tr>
+    {% capture optional %}{% if p.default_value or p.is_var_args %}<div class="ui horizontal label">optional</div>&nbsp;{% endif %}{% endcapture %}
+    <tr><td class="collapsing"><code>{{ p_sig | rstrip }}</code></td><td>{{ optional }}{% if p.description %}{{ p.description | markdownify | remove: '<p>' | remove: '</p>' }}{% endif %}</td></tr>
   {% endfor %}
-  {% if has_return %}<tr><td class="collapsing"><div class="ui ribbon label">returns</div>{{ return_val }}</td><td>{{ r_tags.first.value | markdownify }}</td></tr>{% endif %}
+  {% if has_return %}<tr><td class="collapsing"><div class="ui basic grey ribbon label">returns</div>{{ return_val }}</td><td>{{ r_tags.first.value | markdownify }}</td></tr>{% endif %}
   </tbody></table>{% endif %}
   </div>
 {% endfor %}
