indent subpages for guide indices

--- a/lib/ghpages-template/_includes/elements/indices.html
+++ b/lib/ghpages-template/_includes/elements/indices.html
@@ -30,6 +30,12 @@
     {% when 'type' %}
       {% capture pkg %}{{ doc.module }}.{{ doc.name }}{% endcapture %}
       {% capture link %}{% include package_shortener.liquid package=pkg %}{% endcapture %}
+    {% when 'page' %}
+      {% assign path_bits = doc.relative_path | split: '.' | first | split: '/' %}
+      {% assign n = path_bits.size | minus: 2 %}
+      {% if n > 3 %}{% assign n = 3 %}{% endif %}
+      {% capture indent %}{% for i in (1..n) %}&ensp;{% endfor %}{% endcapture %}
+      {% capture link %}{{ indent }}{{ doc.title }}{% endcapture %}
   {% endcase %}
   <a class="very tight smaller text item" href="{{ site.baseurl }}{{ url }}">{{ link }}</a>
 {% endfor %}
