--- a/docs/_includes/see_also.liquid
+++ b/docs/_includes/see_also.liquid
@@ -22,7 +22,7 @@ params:
 {%- assign see_also = include.tags | where:'name','see' -%}
 {%- if see_also.size > 0 -%}
 {%- assign h = include.heading | default: 3 -%}
-<h{{ h }} class="ui tight sub header">See Also</h{{ h }}>
+<h{{ h }} class="ui grey sub header">See Also</h{{ h }}>
 <ul>
 {% assign see_also = see_also | sort: 'value' -%}
 {% for tag in see_also %}
