--- a/docs/styles/site.css
+++ b/docs/styles/site.css
@@ -12,11 +12,13 @@ layout: compress
 {% include styles/semantic-ui/divider.min.css %}
 {% include styles/semantic-ui/grid.min.css %}
 {% include styles/semantic-ui/header.min.css %}
+{% include styles/semantic-ui/image.min.css %}
 {% include styles/semantic-ui/input.min.css %}
 {% include styles/semantic-ui/item.min.css %}
 {% include styles/semantic-ui/label.min.css %}
 {% include styles/semantic-ui/list.min.css %}
 {% include styles/semantic-ui/menu.min.css %}
+{% include styles/semantic-ui/message.min.css %}
 {% include styles/semantic-ui/modal.min.css %}
 {% include styles/semantic-ui/rail.min.css %}
 {% include styles/semantic-ui/search.min.css %}
