update semantic to 2.2.13; fix font import by moving to top of file
also some cleanup:
- separate jquery address into own directory
- extract repeated semantic version info to common includes

--- a/lib/ghpages-template/styles/site.css
+++ b/lib/ghpages-template/styles/site.css
@@ -2,8 +2,9 @@
 layout: compress
 ---
 
-{% include styles/semantic-ui/reset.min.css %}
+{% include styles/semantic-ui/_version.css %}
 {% include styles/semantic-ui/site.min.css %}
+{% include styles/semantic-ui/reset.min.css %}
 
 {% include styles/semantic-ui/breadcrumb.min.css %}
 {% include styles/semantic-ui/button.min.css %}
