add custom styling for block quotes; improve styling of code snippets

--- a/lib/ghpages-template/_includes/styles/tweaks.css
+++ b/lib/ghpages-template/_includes/styles/tweaks.css
@@ -82,16 +82,6 @@ span.anchor {
 }
 
 /* custom styling */
-code, kbd, pre, samp {
-  font-family: Consolas,'Lucida Console','Andale Mono',monospace;
-}
-p code {
-    padding: 2px 4px;
-    font-size: 90%;
-    color: #d87b00;
-    background-color: #f5f4e8;
-    border-radius: 4px;
-}
 blockquote {
   background: #f9f9f9;
   border-left: .5em solid #4183c4;
@@ -100,6 +90,19 @@ blockquote {
 }
 blockquote p {
   display: inline;
+}
+code, kbd, pre, samp {
+  font-family: Consolas,'Lucida Console','Andale Mono',monospace;
+}
+li code, p code, td code {
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #d87b00;
+    background-color: #f5f4e8;
+    border-radius: 4px;
+}
+pre.highlight {
+  line-height: 1.18em;
 }
 #page {
   margin-top:3.40em; /* position page under top menu */
