limit max-width for blocks of large text; set line heights for sized text
limiting the max-width makes reading a bit more pleasant on wide screens

--- a/lib/ghpages-template/_includes/styles/tweaks.css
+++ b/lib/ghpages-template/_includes/styles/tweaks.css
@@ -110,8 +110,13 @@ pre.highlight {
 .larger.text {
   font-size: 150%;
 }
+p.larger.text {
+  line-height: 150%;
+  max-width: 50rem;
+}
 .smaller.text {
   font-size: 80%;
+  line-height: 80%;
 }
 .normal.text {
   font-weight: normal;
