limit max-width for ui messages
limiting the max-width makes reading a bit more pleasant on wide screens

--- a/lib/ghpages-template/_includes/styles/tweaks.css
+++ b/lib/ghpages-template/_includes/styles/tweaks.css
@@ -80,6 +80,9 @@ span.anchor {
 .ui.tight.label, .ui.tight.button {
   padding: .25em;
 }
+.ui.message {
+  max-width: 45rem;
+}
 
 /* custom styling */
 blockquote {
