--- a/docs/_layouts/type.html
+++ b/docs/_layouts/type.html
@@ -2,13 +2,16 @@
 layout: page
 ---
 
+{% assign page_url_pieces = page.url | split: '/' %}
+{% assign module_root = page_url_pieces[1] | prepend: '/' %}
+
 <span class="anchor" id="heading">&nbsp;</span>
 <h1 class="ui dividing header">{{ page.name }}</h1>
 
 <div class="ui list">
   <div class="item">
     {% include icon.liquid id='folder-outline' %}
-    <div class="content">{% include module_linker.liquid module=page.module base_url=site.baseurl module_root=site.module_root %}</div>
+    <div class="content">{% include module_linker.liquid module=page.module base_url=site.baseurl module_root=module_root %}</div>
   </div>
   <div class="item">
     {% include icon.liquid id='file-outline' %}
@@ -21,7 +24,7 @@ layout: page
       {% assign content = '' %}
       {% for interface in page.implements %}
         {% assign module = interface.module | append: '.' | append: interface.name %}
-        {% capture link %}{% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
+        {% capture link %}{% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=module_root %}{% endcapture %}
         {% unless forloop.last %}
           {% assign link = link | append: ', ' %}
         {% endunless %}
@@ -41,7 +44,7 @@ layout: page
         {% for ancestor in page.ancestors %}
         {% include icon.liquid id='chevron-right' class='divider' %}
         {% assign module = ancestor.module | append: '.' | append: ancestor.name %}
-        {% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=site.module_root %}
+        {% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=module_root %}
         {% endfor %}
       </div>
     </div>
@@ -54,7 +57,7 @@ layout: page
       {% assign content = '' %}
       {% for descendant in page.descendants %}
         {% assign module = descendant.module | append: '.' | append: descendant.name %}
-        {% capture link %}{% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
+        {% capture link %}{% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=module_root %}{% endcapture %}
         {% unless forloop.last %}
           {% assign link = link | append: ', ' %}
         {% endunless %}
@@ -73,7 +76,7 @@ layout: page
 {% capture description %}{{ page.description }}{% endcapture %}
 {{ description | replace: '   ⇥', '⇥' | replace: '⇥', site.code_indent | markdownify }}
 {% assign base_module = page.module | append: '.' | append: page.name %}
-{% include see_also.liquid base_module=base_module tags=page.tags heading=3 %}
+{% include see_also.liquid base_module=base_module tags=page.tags heading=3 module_root=module_root %}
 </div>
 {% endunless %}
 
@@ -96,13 +99,13 @@ layout: page
 {% assign isFunc = false %}{% if a == 'constructor' or a == 'signature' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
 {% assign isCtor = false %}{% if a == 'constructor' %}{% assign isCtor = true %}{% endif %}
 {% for item in list %}
-  {% capture params %}{% include parameters.liquid params=item.parameters base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
+  {% capture params %}{% include parameters.liquid params=item.parameters base_url=site.baseurl module_root=module_root %}{% endcapture %}
   {% assign d_tags = item.tags | where_exp:"t", "t.name == 'deprecated'" %}
   {% capture deprecated %}{% if d_tags.size > 0 %}<div class="ui horizontal orange label">deprecated {{ d_tags.first.value }}</div>{% endif %}{% endcapture %}
   {% capture static %}{% if item.attributes contains 'static' %}<div class="ui horizontal grey label">static</div>{% endif %}{% endcapture %}
   {% capture read_only %}{% if item.is_read_only %}<div class="ui horizontal label">read only</div>{% endif %}{% endcapture %}
   {% capture chainable %}{% if item.is_chainable %}<div class="ui horizontal label">chainable</div>{% endif %}{% endcapture %}
-  {% capture signature %}<a href="#details-{{ item.name }}">{{ item.name }}</a><span class="normal text">{% if isFunc and params.size == 0 %}(){% else %}{{ params | rstrip }}{% endif %}{% if isCtor != true %}:{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=site.baseurl module_root=site.module_root %}{% else %}{% include module_linker.liquid module=item.type base_url=site.baseurl module_root=site.module_root %}{% endif %}{% endif %}</span>{% endcapture %}
+  {% capture signature %}<a href="#details-{{ item.name }}">{{ item.name }}</a><span class="normal text">{% if isFunc and params.size == 0 %}(){% else %}{{ params | rstrip }}{% endif %}{% if isCtor != true %}:{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=site.baseurl module_root=module_root %}{% else %}{% include module_linker.liquid module=item.type base_url=site.baseurl module_root=module_root %}{% endif %}{% endif %}</span>{% endcapture %}
   {% assign d_lines = item.description | split: newline %}
   <tr><td{% if forloop.first %} class="collapsing"{% endif %}>{{ signature | rstrip }}</td><td>{{ deprecated }}{{ static }}{{ read_only }}{{ chainable }}{{ d_lines | first | markdownify | remove: '<p>' | remove: '</p>' | remove: '</p>' | rstrip }}</td></tr>
 {% endfor %}
@@ -125,20 +128,20 @@ layout: page
 {% assign isFunc = false %}{% if a == 'constructor' or a == 'signature' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
 {% assign isCtor = false %}{% if a == 'constructor' %}{% assign isCtor = true %}{% endif %}
 {% for item in list %}
-  {% capture params %}{% include parameters.liquid params=item.parameters base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
+  {% capture params %}{% include parameters.liquid params=item.parameters base_url=site.baseurl module_root=module_root %}{% endcapture %}
   {% assign d_tags = item.tags | where_exp:"t", "t.name == 'deprecated'" %}
   {% capture deprecated %}{% if d_tags.size > 0 %}<div class="ui horizontal orange label">deprecated {{ d_tags.first.value }}</div>{% endif %}{% endcapture %}
   {% capture static %}{% if item.attributes contains 'static' %}<div class="ui horizontal grey label">static</div>{% endif %}{% endcapture %}
   {% capture read_only %}{% if item.is_read_only %}<div class="ui horizontal label">read only</div>{% endif %}{% endcapture %}
   {% capture chainable %}{% if item.is_chainable %}<div class="ui horizontal label">chainable</div>{% endif %}{% endcapture %}
-  {% capture return_val %}{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=site.baseurl module_root=site.module_root %}{% else %}{% include module_linker.liquid module=item.type base_url=site.baseurl module_root=site.module_root %}{% endif %}{% endcapture %}
+  {% capture return_val %}{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=site.baseurl module_root=module_root %}{% else %}{% include module_linker.liquid module=item.type base_url=site.baseurl module_root=module_root %}{% endif %}{% endcapture %}
   {% capture signature %}{{ item.attributes | join: ' ' }} {% if isFunc %}function {% endif %}<strong>{{ item.name }}</strong>{% if isFunc and params.size == 0 %}(){% else %}{{ params | rstrip }}{% endif %}{% if isCtor != true %}:{{ return_val }}{% endif %}{% endcapture %}
   <div class="ui tight vertical segment"><span class="anchor" id="details-{{ item.name }}">&nbsp;</span><h4 class="ui very tight header">{{ item.name }}{% if isFunc %}(){% endif %}{{ deprecated }}{{ static }}{{ read_only }}{{ chainable }}</h4>
   <p><code>{{ signature }}</code></p>
   {{ item.description | markdownify }}
 
   {% assign base_module = page.module | append: '.' | append: page.name %}
-  {% include see_also.liquid base_module=base_module tags=item.tags heading=4 %}
+  {% include see_also.liquid base_module=base_module tags=item.tags heading=4 module_root=module_root %}
 
   {% assign r_tags = item.tags | where_exp:"t", "t.name == 'return'" %}
   {% assign has_return = false %}
