--- a/docs/_layouts/package.html
+++ b/docs/_layouts/package.html
@@ -13,7 +13,7 @@ layout: page
 <div class="ui horizontal divided list">
   {% assign list = page.submodules %}
   {% for name in list %}
-  <div class="item"><a class="header" href="{{ page_module_url }}/{{ name }}">{{ name }}</a></div>
+  <div class="item"><a class="header" href="{{ page_module_url }}/{{ name }}/#{{ module_root }}/">{{ name }}</a></div>
   {% endfor %}
 </div>
 {% endif %}
@@ -30,7 +30,7 @@ layout: page
   {% assign list = page[t] %}
   {% for item in list %}
     {% capture content %}
-    <a class="header" href="{{ page_module_url }}/{{ item.name }}">{{ item.name }}</a>
+    <a class="header" href="{{ page_module_url }}/{{ item.name }}/#{{ module_root }}/">{{ item.name }}</a>
     <div class="description">
       {{ item.description | newline_to_br | split: '<br />' | first | rstrip | markdownify | remove: '<p>' | remove: '</p>' }}{% if item.description %}<br/>{% endif %}
       <span class="smaller text"><i>Declared in:</i> {{ item.declaration }}</span>
